Removed no-wrap from obstacle boxes & made some text small to fix scaling issues

--- a/ybhs/ProjectCSS.css
+++ b/ybhs/ProjectCSS.css
@@ -296,7 +296,7 @@ iframe
     font-family: "Quicksand-Bold", sans-serif;
     margin-top: 1vw;
     margin-left: 1vw;
-    font-size: 2vw;
+    font-size: 1.85vw;
     color: black;
 }
 
